[build-system]
requires = ["setuptools>=70.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "poly-mcp-client"
version = "0.0.3"
description = "An MCP client adapting tool definitions for Anthropic, OpenAI, and Gemini."
readme = "README.md"
authors = [
    { name = "yo-ban" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
keywords = ["mcp", "model context protocol", "client", "manager", "ai", "llm"]

# 必須の依存関係
dependencies = [
    "mcp == 1.6.0",
    "pydantic >= 2.10.6",
]

[project.urls]
Homepage = "https://github.com/yo-ban/poly-mcp-client"
Repository = "https://github.com/yo-ban/poly-mcp-client.git"

# (オプション) 開発やテスト用の依存関係
[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.20", # 非同期テスト用
    "pytest-mock >= 3.5",     # pytest 用の mocker フィクスチャ
    "pytest-cov >= 3.0",      # コードカバレッジ計測用 (オプション)
    # unittest.mock は Python 標準ライブラリに含まれるため、通常は不要
]
dev = [
    "poly-mcp-client[test]", # test 依存関係を含む
    "mypy >= 1.0",
    "ruff",
    "types-setuptools",
]

# setuptools 固有の設定 (srcレイアウトを使う場合)
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88 # Black互換
select = ["E", "W", "F", "I", "UP", "PL", "PYI"]
ignore = ["E501"] # line-lengthで制御するため無視

[tool.ruff.lint]
# select/ignore はここに書くことも可能

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["poly_mcp_client"]
# ignore_missing_imports = true

# pytest の設定
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests", # テストファイルを探すディレクトリ
]
# addopts = "-ra -q" # pytest の実行オプション (例: -v で詳細表示、-s で print 表示)
asyncio_mode = "auto" # pytest-asyncio にイベントループ管理を任せる